--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,7 +20,7 @@
         tools:layout_editor_absoluteY="151dp" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/enter_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -39,7 +39,7 @@
         tools:layout_editor_absoluteY="434dp" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/enter_Email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -69,7 +69,7 @@
         tools:layout_editor_absoluteY="318dp" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/enter_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -78,12 +78,25 @@
         tools:layout_editor_absoluteY="309dp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/submit_reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="שמירה"
         android:textColor="#00838F"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="513dp" />
+
+    <Button
+        android:id="@+id/go_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="חזרה"
+        android:textColor="#009688"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.836" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
